ops/storage/rook/rook-ceph-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: rook-ceph
  name: rook-ceph
